# NEXUS

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CITATION.bib  CMakeLists.txt  README.md  compile_commands.json  cosine.txt  justfile  log  network.sh  sk.txt  sk_bytes
.cache/clangd/index/: ckks_evaluator.cpp.CD300796A3EBB8A3.idx  ckks_evaluator.h.1DDA128F52151172.idx  gelu.cpp.4EA1F333FD6CC924.idx  gelu.h.65ACF8F161D75FE5.idx  layer_norm.cpp.F5ACC92B84FA79BE.idx  layer_norm.h.437E11A0CEB768AE.idx  main.cpp.85CE30D2B582E9FF.idx  sgn.cpp.83C1E544E3776A16.idx  softmax.cpp.2AE5EDFE4C6BE12F.idx  softmax.h.F6996DB00CD64E56.idx
SEAL-3.6-bs/: CMakeLists.txt
SEAL-3.6-bs/native/examples/: 1_bfv_basics.cpp  2_encoders.cpp  4_ckks_basics.cpp  6_serialization.cpp
SEAL-3.6-bs/native/src/seal/: encryptionparams.h  keygenerator.h
SEAL-3.6-bs/native/src/seal/util/: rlwe.cpp
SEAL-4.1-bs/: CMakeLists.txt
SEAL-4.1-bs/native/src/seal/: ckks.cpp  ckks.h  encryptionparams.h  evaluator.cpp  evaluator.h  keygenerator.cpp
SEAL-4.1-bs/native/src/seal/util/: galois.h  hestdparms.h  rlwe.cpp  rlwe.h
common/: CMakeLists.txt  Choosemax.cpp  MinicompFunc.cpp  MinicompFunc.h  MinicompRemez.cpp  MinicompRemez.h  Point.cpp  Polynomial.h  Remez.cpp  Remez.h  RemezApp.h  func.cpp  func.h
cpu-ckks/single-key/ckks_bootstrapping/: Bootstrapper.cpp  Makefile  ModularReducer.cpp  RemezArcsin.h  RemezCos.h  cmake_install.cmake  cosine.txt  inverse_sine.txt
cpu-ckks/single-key/cnn/: CMakeLists.txt  cnn_seal.cpp  cnn_seal.h  infer_seal.cpp  infer_seal.h
cpu-ckks/single-key/comp/: CMakeLists.txt  SEALcomp.cpp  SEALcomp.h  SEALfunc.cpp  SEALfunc.h  program.cpp  program.h
cpu-ckks/single-key/seal-modified-3.6.6/: .gitignore
cpu-ckks/single-key/seal-modified-3.6.6/native/examples/: 3_levels.cpp  5_rotation.cpp  7_performance.cpp
cpu-ckks/single-key/seal-modified-3.6.6/native/src/seal/: ckks.cpp  ckks.h  evaluator.cpp  evaluator.h  keygenerator.cpp
cpu-ckks/single-key/seal-modified-3.6.6/native/src/seal/util/: rlwe.h
cuda/: CMakeLists.txt  README.md
cuda/src/: argmax.cu  argmax.cuh  bootstrap_test.cu  bootstrapping.cu  ckks_evaluator.cu  ckks_evaluator.cuh  gelu.cu  gelu.cuh  kernels.cu  kernels.cuh  layer_norm.cu  layer_norm.cuh  main.cu  matrix_mul.cu  matrix_mul.cuh  matrix_mul_p.cu  nexus_util.cuh  softmax.cu  softmax.cuh  utils.cuh
cuda/src/bootstrapping/: Bootstrapper.cu  Bootstrapper.cuh  ModularReducer.cu  ModularReducer.cuh  RemezArcsin.cuh  RemezCos.cuh
cuda/src/bootstrapping/common/: Choosemax.cu  Choosemax.cuh  MinicompFunc.cu  MinicompFunc.cuh  MinicompRemez.cu  MinicompRemez.cuh  Point.cu  Point.cuh  PolyUpdate.cu  PolyUpdate.cuh  Polynomial.cu  Polynomial.cuh  Remez.cu  Remez.cuh  RemezApp.cu  RemezApp.cuh  RemezParam.h  func.cu  func.cuh
data/: data_generation.py  test.py
data/calibration/: gelu_calibration_32768.txt  layernorm_calibration_16_768.txt  matrix_output_m_128_k_64_batch_128.txt  result_matrix.txt  softmax_calibration_128_128.txt
data/input/: argmax_input_8.txt  gelu_input_32768.txt  layernorm_input_16_768.txt  matrix_128x768.txt  matrix_768x64.txt  matrix_input_n_768_k_64.txt  softmax_input_128_128.txt
src/: argmax.cpp  argmax.h  bootstrap_test.cpp  bootstrapping.cpp  ckks_evaluator.cpp  ckks_evaluator.h  gelu.cpp  gelu.h  layer_norm.cpp  layer_norm.h  main.cpp  matrix_mul.cpp  matrix_mul.h  softmax.cpp  softmax.h
src/bootstrapping/: Bootstrapper.cpp  Bootstrapper.h  CMakeLists.txt  Makefile  ModularReducer.cpp  ModularReducer.h  RemezArcsin.h  RemezCos.h  cmake_install.cmake
src/bootstrapping/common/: Choosemax.cpp  Choosemax.h  Makefile  MinicompFunc.cpp  MinicompRemez.cpp  MinicompRemez.h  Point.cpp  Point.h  PolyUpdate.cpp  PolyUpdate.h  Polynomial.cpp  Polynomial.h  Remez.cpp  Remez.h  RemezApp.cpp  RemezApp.h  RemezParam.h  cmake_install.cmake  func.cpp  func.h
